2011-06-03  Robert Kroeger  <rjkroege@chromium.org>

        Reviewed by Adam Barth.

        Modified addTouchPoint to correctly re-use touchPoint id values starting
        from the lowest not-un-use touchPoint id as is done by the embedder
        APIs. (Fixes BUGCR36415)

        https://bugs.webkit.org/show_bug.cgi?id=62016

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::addTouchPoint):

2011-06-03  Cary Clark  <caryclark@google.com>

        Reviewed by Eric Seidel.

        Draw DRT scroll bar thumb with CG when WebKit renders with Skia
        https://bugs.webkit.org/show_bug.cgi?id=61534

        Skia on Mac uses Skia to render WebKit, and CG
        to render UI elements. The CG elements need a
        transcribed graphics context that preserves the
        canvas matrix, and the canvas clip.

        The SkiaBitLocker utility class sets up a CGContext
        from the SkCanvas, locks the bitmap's bits, and
        releases the lock when the class goes out of scope.

        The SkiaBitLocker implementation is described by
        this patch:
        http://codereview.chromium.org/7031006/

        When WebKit uses Skia for rendering, the WebCanvas
        is an SkCanvas. Create an equivalent CGContext to
        draw the scrollbar thumb.

        As the Chrome Mac port does not yet use Skia, this
        patch has no effect and requires no tests.

        * DumpRenderTree/chromium/WebThemeEngineDRTMac.mm:
        (WebThemeEngineDRTMac::paintHIThemeScrollbarThumb):

2011-06-03  Andras Becsi  <abecsi@webkit.org>

        Unreviewed build fix.

        Fix typo.

        * Scripts/old-run-webkit-tests:

2011-06-03  Andras Becsi  <abecsi@webkit.org>

        Reviewed by Csaba Osztrogonác.

        Print error message when there is no httpd present on the system
        https://bugs.webkit.org/show_bug.cgi?id=61939

        * Scripts/old-run-webkit-tests: Propose to run with --no-httpd.
        * Scripts/webkitperl/httpd.pm:
